# better_rm

./: Cargo.toml  README.md
src/: main.rs
