[package]
name = "better_rm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

[profile.release]
opt-level = 3               
overflow-checks = false  
strip=true
debug-assertions = false
lto=true
rpath = false
